--- a/main/mainhome.css
+++ b/main/mainhome.css
@@ -123,16 +123,23 @@ input[type=checkbox]{
   margin: 0 auto;
   margin-bottom: 3%;
 }
-
+table{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
 .flip-card-back, .flip-card2-back{
-  width: 250px;
+  width: 350px;
   height: 250px;
   border-radius: 5%;
   background-color: #5c1444;
   padding: 10%;
   color: var(--bgcolor-1);
 }
-
+/* .flip-card-back{
+  display: flex;
+  justify-content: space-between;
+} */
 .footer{
   background-color: var(--secondaryColor);
   min-height: 10%;
