--- a/trainers/coachalaa.css
+++ b/trainers/coachalaa.css
@@ -150,8 +150,9 @@ input[type=checkbox]{
 }
 
 .info{
-flex-basis: 40%;
-padding: 10px;
+/* flex-basis: 40%; */
+/* padding: 10px; */
+margin-bottom: 100px;
 text-align: left;
 } 
 
@@ -175,10 +176,11 @@ text-align: left;
   /*/////////////////////////////////////////*/
 .containerr{
     width: 100%;
-    height:10vh;
+    /* height:10vh; */
     display: flex;
     align-items: center;
     justify-content: center;
+    /* margin-bottom: 500px; */
 }
 
 .btn{
@@ -248,16 +250,7 @@ text-align: left;
 
 
 /*/////////////footer//////////////*/
-.footer {
-    position: absolute;
-    left: 0;
-    bottom: -15%;
-    width: 100%;
-    height: 19%;
-    background-color: var(--secondaryColor);
-    color: var(--bgcolor-1);
-    text-align: center;
-}
+
 
 
 .fa-phone{color: var(--bgcolor-1);
@@ -309,4 +302,33 @@ input{
     font-size: 16px;
     font-weight: 500;
     border-radius: 30px;
+}
+
+.footer{
+    background-color: var(--secondaryColor);
+    min-height: 10%;
+  }
+  .footer h2{
+    text-align: center;
+    color: var(--bgcolor-1);
+    /* padding: .7%; */
+  }
+  
+  .follow{
+    display: flex;
+    justify-content: space-around;
+  }
+  .follow div{
+    padding-bottom: 2%;
+  }
+  
+
+@media(max-width: 700px){
+    .coachpage{
+        flex-direction: column;
+        align-items: center;
+    }
+    .btn{
+        display: none;
+    }
 }
